{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 294,
  "lineage": "3069413e-b7a0-3953-92e8-d1a61f5eba32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom_EPI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdc3b12c75db6e23",
            "association_id": "eipassoc-0338bf744ee5e729a",
            "domain": "vpc",
            "id": "eipalloc-0cdc3b12c75db6e23",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0a9d89c6546c43125",
            "private_dns": "ip-172-168-1-60.eu-north-1.compute.internal",
            "private_ip": "172.168.1.60",
            "public_dns": "ec2-13-50-181-90.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.181.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:internet-gateway/igw-0ffccd287d51b6379",
            "id": "igw-0ffccd287d51b6379",
            "owner_id": "059039215690",
            "tags": {
              "Name": "custom-IGW"
            },
            "tags_all": {
              "Name": "custom-IGW"
            },
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "dependencies": [
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:loadbalancer/app/my-load-balancer/4261bd1d1e865153",
            "arn_suffix": "app/my-load-balancer/4261bd1d1e865153",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-1758779057.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:loadbalancer/app/my-load-balancer/4261bd1d1e865153",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0481c88a1d999a5a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0dc1b22a451a392e4"
              },
              {
                "subnet_id": "subnet-0f6c9a0b641d87e1d"
              }
            ],
            "subnets": [
              "subnet-0dc1b22a451a392e4",
              "subnet-0f6c9a0b641d87e1d"
            ],
            "vpc_id": "vpc-065f72cd037678e42",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-target-group/2d021ea0cd480efc",
            "arn_suffix": "targetgroup/my-target-group/2d021ea0cd480efc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-target-group/2d021ea0cd480efc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "dependencies": [
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdc3b12c75db6e23",
            "association_id": "eipassoc-0338bf744ee5e729a",
            "connectivity_type": "public",
            "id": "nat-0214e490fd8d9ed93",
            "network_interface_id": "eni-0a9d89c6546c43125",
            "private_ip": "172.168.1.60",
            "public_ip": "13.50.181.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f6c9a0b641d87e1d",
            "tags": {
              "Name": "custom-NAT-GW"
            },
            "tags_all": {
              "Name": "custom-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.custom_EPI",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:route-table/rtb-08a83bbf986f6c480",
            "id": "rtb-08a83bbf986f6c480",
            "owner_id": "059039215690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffccd287d51b6379",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom_RT"
            },
            "tags_all": {
              "Name": "custom_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom_IGW",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:route-table/rtb-048961473b5d74584",
            "id": "rtb-048961473b5d74584",
            "owner_id": "059039215690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0214e490fd8d9ed93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_custom_RT"
            },
            "tags_all": {
              "Name": "private_custom_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.custom_EPI",
            "aws_nat_gateway.custom_NAT_GW",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02de31f22a3e70705",
            "route_table_id": "rtb-08a83bbf986f6c480",
            "subnet_id": "subnet-0f6c9a0b641d87e1d"
          },
          "dependencies": [
            "aws_internet_gateway.custom_IGW",
            "aws_route_table.custom_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0630f0dbe0a81734d",
            "route_table_id": "rtb-048961473b5d74584",
            "subnet_id": "subnet-0dc1b22a451a392e4"
          },
          "dependencies": [
            "aws_eip.custom_EPI",
            "aws_nat_gateway.custom_NAT_GW",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:security-group/sg-0481c88a1d999a5a2",
            "description": "Allow inbound HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481c88a1d999a5a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "059039215690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-Ssecurity-gp"
            },
            "tags_all": {
              "Name": "alb-Ssecurity-gp"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:subnet/subnet-0dc1b22a451a392e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc1b22a451a392e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059039215690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "dependencies": [
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:subnet/subnet-0f6c9a0b641d87e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c9a0b641d87e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059039215690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-065f72cd037678e42"
          },
          "dependencies": [
            "aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:vpc/vpc-065f72cd037678e42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-004328c738de8222e",
            "default_route_table_id": "rtb-0666c8cca314dd657",
            "default_security_group_id": "sg-02af085f0fc642949",
            "dhcp_options_id": "dopt-0ccaffef4f591778f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065f72cd037678e42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0666c8cca314dd657",
            "owner_id": "059039215690",
            "tags": {
              "Name": "my-custom-vpc"
            },
            "tags_all": {
              "Name": "my-custom-vpc"
            }
          }
        }
      ]
    }
  ]
}